# esp32_cl_har

./: .gitignore  Cargo.toml  DEVLOG.md  README.md  THESIS.md  platformio.ini
logs/parsed/fifo/: fifo_dryrun_2026-05-09_summary.json
logs/parsed/no_adapt/: no_adapt_dryrun_2026-05-09_summary.json
logs/parsed/reservoir/: reservoir_dryrun_2026-05-09_summary.json
logs/raw/: fifo_dryrun_2026-05-09.txt  no_adapt_dryrun_2026-05-09.txt  reservoir_dryrun_2026-05-09.txt
logs/raw/pilot_2class/: fifo_pilot_2class_2026-05-09.txt  no_adapt_pilot_2class_2026-05-09.txt  reservoir_pilot_2class_2026-05-09.txt
logs/raw/pilot_sit_up/: sit_up_fifo_2026-05-09.txt  (+2 more)
notebooks/: CNN_training.ipynb  CNN_training_microflow32.ipynb  paper_results_analysis.ipynb
paper/: article_structure_uk.md  conclusion_draft_uk.md  discussion_draft_uk.md  experimental_setup_draft_uk.md  introduction_related_work_draft_uk.md  results_draft_uk.md  system_architecture_draft_uk.md
results/: analysis_notes_uk.md
results/tables/: phase5_pilot_results_2026-05-09.md  table_resource_overhead_sit_up.md  table_wisdm_user19_device_cl_per_class_heldout.md  table_wisdm_user19_device_cl_summary.md
scripts/: audit_wisdm_target_users.py  build_wisdm_user19_device_cl_figures.py  evaluate_segments.py  export_wisdm_device_eval_artifact.py  export_wisdm_target_user_head_rust.py  parse_experiment_logs.py  quant_sanity_check.py  simulate_balanced600_cl.py  simulate_wisdm_user7_cl.py  summarize_experiment_runs.py  train_wisdm_fold_microflow32.py
scripts/analysis/: build_pilot_results_tables.py  build_wisdm_user19_device_cl_figures.py  summarize_wisdm_target_user_cl.py
scripts/checks/: quant_sanity_check.py
scripts/data/: audit_wisdm_target_users.py  export_wisdm_device_eval_artifact.py  export_wisdm_target_user_head_rust.py
scripts/parsing/: parse_wisdm_device_cl.py  parse_wisdm_device_eval.py
scripts/simulation/: simulate_balanced600_cl.py  simulate_wisdm_user7_cl.py
scripts/training/: train_wisdm_fold_microflow32.py
src/: inference.rs  inference_microflow.rs  inference_microflow32.rs  lib.rs  main.cpp  model.rs  mpu6050.rs  online_layer.rs  quant.rs  replay_buffer.rs  window.rs
src/eval_artifacts/: wisdm_eval_metadata_balanced_600.json  wisdm_eval_metadata_full_9154.json  wisdm_eval_metadata_smoke_120.json  wisdm_user19_head.rs
src/model_artifacts/: microflow_fullconv32_classifier_int8.tflite  microflow_fullconv32_classifier_int8_metadata.json  microflow_fullconv32_feature_extractor_int8.tflite  microflow_fullconv32_feature_extractor_int8_metadata.json  microflow_fullconv_classifier_int8.tflite  microflow_fullconv_classifier_int8_metadata.json  microflow_fullconv_feature_extractor_int8.tflite  microflow_fullconv_feature_extractor_int8_metadata.json
(+30 files in other folders)
