[package]
edition      = "2024"
name         = "esp32_cl_har"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp32_cl_har"
path = "./src/bin/main.rs"

# Diagnostic-only MicroFlow smoke test. Kept for comparing MicroFlow's public
# f32 API with the production-like quantized input path.
[[bin]]
name = "microflow_feature_smoke"
path = "./src/bin/microflow_feature_smoke.rs"
required-features = ["microflow_backend"]

# Active Phase 3 smoke test for the intended ESP32 flow:
# normalized window -> i8[240] -> MicroFlow predict_quantized -> f32[64].
[[bin]]
name = "microflow_feature_quantized_smoke"
path = "./src/bin/microflow_feature_quantized_smoke.rs"
required-features = ["microflow_backend"]

[[bin]]
name = "microflow32_consistency_smoke"
path = "./src/bin/microflow32_consistency_smoke.rs"
required-features = ["microflow32_backend"]

[[bin]]
name = "mpu_domain_shift_probe"
path = "./src/bin/mpu_domain_shift_probe.rs"

[features]
default = []
microflow_backend = ["dep:microflow", "dep:nalgebra"]
microflow32_backend = ["dep:microflow", "dep:nalgebra"]
replay_fifo_policy = []

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "unstable"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-println = { version = "0.13", features = ["esp32", "log"] }
log = "0.4"
critical-section = "1.2.0"
libm = "0.2"
microflow = { version = "0.1.3", optional = true }
nalgebra = { version = "0.32", default-features = false, features = ["macros"], optional = true }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
